--- a/src/main/resources/application-h2.properties
+++ b/src/main/resources/application-h2.properties
@@ -1,4 +1,15 @@
-spring.datasource.url=jdbc:h2:mem:testdb;Mode=Oracle
-spring.datasource.platform=h2
-spring.jpa.hibernate.ddl-auto=none
-spring.datasource.continue-on-error=true
+# H2 datasource configuration
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+
+# Let Hibernate create tables automatically
+spring.jpa.hibernate.ddl-auto=create-drop
+
+# H2 console
+spring.h2.console.enabled=true
+spring.h2.console.path=/console
+
+# Show SQL for debugging
+spring.jpa.show-sql=true
